# Packrelic

./: .gitignore  PackRelic.spec  README.en.md  README.ja.md  README.md  SmartUnpacker.spec  dump_7z_formats.cpp  requirements-build.txt  run_acceptance_tests.ps1  smart_unpacker_config.json  sunpack_advanced_config.json  sunpack_config.json
.smart_unpacker_cache/: profile_calibration.json
docs/: cli.zh.md  cli_parameters.md  configuration.md  configuration.zh.md  development_boundaries.md  development_setup.md  rule_plugins.md
native/smart_unpacker_native/: Cargo.toml  README.md
native/smart_unpacker_native/src/: analysis.rs  archive_deep_repair.rs  archive_state_ops.rs  compression_stream_repair.rs  directory_scan.rs  file_crc.rs  format_structure.rs  lib.rs  password_7z.rs  password_rar.rs  password_zip.rs  postprocess_ops.rs  relations.rs  zip_deep_repair.rs
repair_training/: __init__.py  archive_derivation_config.json  archive_material_json.ps1  build_repair_plan_corpus.py  clear_material.ps1  collect_plan_data.ps1  collect_repair_plan_data.py  derive_archives.ps1  derive_archives.py  training_corruption.py
scripts/: build_windows.ps1  collect_repair_candidates.py  register_context_menu.ps1  run_ci_tests.ps1  setup_windows_dev.ps1  verify_windows_package_arch.ps1
tests/: cli_unit_test.py  conftest.py  disguised_detection_profile_test.py  edge_cases_test.py  game_runtime_semantic_test.py  generated_samples_smoke_test.py  module_unit_test.py  performance_pressure_test.py  relationship_grouping_test.py  synthetic_samples.py  test_config.json  test_config.py
(+432 files in other folders)
